--- a/src/app/components/user/pages/user-list/user-list.component.html
+++ b/src/app/components/user/pages/user-list/user-list.component.html
@@ -1,1 +1,27 @@
-<p>user-list works!</p>
+<h1>Lista de usuarios</h1>
+<button type="button" class="btn btn-outline-success mt-2 mb-2" >Crear</button>
+<table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Email</th>
+        <th scope="col">Rol</th>
+        <th scope="col">Activo</th>
+        <th scope="col" width="200px"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>lahrnanedz15043@gmail.com</td>
+        <td>AUDITOR</td>
+        <td>Si</td>
+        <td> 
+            <button type="button" class="btn btn-primary m-2">Editar</button>
+            <button type="button" class="btn btn-danger ">Eliminar</button>
+        </td>
+      </tr>
+    </tbody>
+</table>
