Service get all users and info, send data to user action component

--- a/src/app/components/user/pages/user-action/user-action.component.html
+++ b/src/app/components/user/pages/user-action/user-action.component.html
@@ -1,4 +1,4 @@
-<h1 class="mt-5">Crear usuario</h1>
+<h1 class="mt-5">{{ title }}</h1>
 <form>
     <div class="row mt-2 g-3">
         <div class="col-md-6">
