--- a/src/app/components/user/pages/user-action/user-action.component.html
+++ b/src/app/components/user/pages/user-action/user-action.component.html
@@ -1,23 +1,31 @@
 <h1 class="mt-5">{{ title }}</h1>
-<form>
+<form [formGroup]="userForm" (ngSubmit)="saveUser()" *ngIf="loading">  
     <div class="row mt-2 g-3">
-        <div class="col-md-6">
+        <div class="col-md-6"> 
             <label for="name" class="form-label">Nombre</label>
             <input type="text" class="form-control" id="name" name="name" formControlName="name">
+            <div *ngIf="( userForm.get('name')?.touched || isSubmit )">
+                <div  class="error-message grid" *ngIf="userForm.get('name')?.hasError('required')">El nombre es obligatorio</div>
+            </div>
         </div>
         <div class="col-md-6">
             <label for="email" class="form-label">Email </label>
             <input type="email" class="form-control" id="email" name="email" formControlName="email">
+            <div *ngIf="( userForm.get('email')?.touched || isSubmit )">
+                <div class="error-message grid" *ngIf="userForm.get('email')?.hasError('required')">El email es obligatorio</div>
+                <div class="error-message grid" *ngIf="userForm.get('email')?.hasError('email')">El email no tiene el formato correcto</div>
+            </div>
         </div>
         <div class="col-md-6">
             <div class="form-group">
-                <label class="my-1 mr-2" for="rol">Rol</label>
-                <select class="form-select" id="rol" name="rol" formControlName="rol">
-                    <option selected>Seleccionar...</option>
-                    <option value="1">ADMINISTRADOR</option>
-                    <option value="2">AUDITOR</option>
-                    <option value="3">AUXILIAR</option>
+                <label class="my-1 mr-2" for="idRol">Rol</label>
+                <select class="form-select" id="idRol" name="idRol" formControlName="idRol">
+                    <option selected value="">Seleccione opción</option>
+                    <option *ngFor="let rol of rols" [ngValue]="rol.idRol">{{rol.name}}</option>
                 </select>  
+                <div *ngIf="( userForm.get('idRol')?.touched || isSubmit )">
+                    <div  class="error-message grid" *ngIf="userForm.get('idRol')?.hasError('required')">El rol es obligatorio</div>
+                </div>
             </div>
         </div>
         <div class="col-md-6">
