--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.error-message{
+    color: red;
+    font-size: 12px;
+}
+.alert-error {
+    margin: 0 auto !important;
+    background-color: black;
+    color: white;
+    width: fit-content;
+}
+.alert-info {
+    margin: 0 auto !important;
+    background-color: green;
+    color: white;
+    width: fit-content;
+}
