--- a/src/app/components/user/pages/user-action/user-action.component.html
+++ b/src/app/components/user/pages/user-action/user-action.component.html
@@ -36,5 +36,6 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Guardar</button>
+    <button type="submit" class="btn btn-primary mt-3 m-2">Guardar</button>
+    <button type="button" class="btn btn-dark mt-3 m-2" [routerLink]="['/user','list']">Atrás</button>
 </form>
