--- a/src/app/components/user/pages/user-list/user-list.component.html
+++ b/src/app/components/user/pages/user-list/user-list.component.html
@@ -13,7 +13,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let user of users; let i = index">
-        <th scope="row">{{ i+1 }}</th>
+        <th scope="row" *ngIf="user.idUser">{{ i+1 }}</th>
         <td>{{ user.name }}</td>
         <td>{{ user.email }}</td>
         <td>{{ user.idRol }}</td>
